# practice

./: .gitignore  Dockerfile  docker-compose.yml  package.json  server.js
ai/: resources.txt
django/: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
django/config/: settings.py  urls.py
dynamodb/: .dockerignore  Dockerfile  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
dynamodb/src/: main.py
express/: Dockerfile
fastapi/: docker-compose.yml
fastapi/app/: main.py
svelte-basic/: package-lock.json  package.json
svelte-route/: package-lock.json  package.json
svelte-route/src/routes/blog/[slug]/: +page.svelte  +page.ts
