[tool.poetry]
name = "practice-django"
version = "0.1.0"
description = ""
authors = ["roman"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.6"
mysqlclient = "^2.1.1"
loguru = "^0.6.0"
django-environ = "^0.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
