[tool.poetry]
name = "dynamodb"
version = "0.0.1"
description = ""
authors = ["roman"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
hydra-core = "^1.3.1"
botocore = "^1.29.45"
pynamodb = "^5.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
